add open api-plus

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi">
 <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
+<script>
+Date.prototype.yyyymmdd = function()
+{
+    var yyyy = this.getFullYear().toString();
+    var mm = (this.getMonth() + 1).toString();
+    var dd = this.getDate().toString();
+    return yyyy + (mm[1] ? mm : '0'+mm[0]) + (dd[1] ? dd : '0'+dd[0]);
+}
+</script>
 </head>
 <body>
 <div>
     <label>종목코드</label><input type="text" id="stockcode" value="003000" />
     <button id="search">종목 검색</button>
+    <button id="chart">차트 데이터 검색</button>
 </div>
 <script>
 var $code = $("#stockcode");
@@ -16,7 +26,6 @@ document.addEventListener("eventConnect.kiwoom", function(e) {
     if(errcode == 0) {
         console.info("로그인 완료");
         console.log(kiwoom.getLoginInfo("ACCNO").replace(/;$/,"").split(";"));
-        search();
     } else {
         console.error(kiwoom.parseErrorCode(errcode));
     }
@@ -52,6 +61,9 @@ document.addEventListener("receiveTrData.kiwoom", function(e) {
                 });
             }
             break;
+        case "opt10081" :
+            console.log("TR 데이터", JSON.parse(kiwoom.getCommDataEx(data.trCode, data.rQName)));
+            break;
     }
 });
 
@@ -74,11 +86,28 @@ $("#search").click(function(e) {
     }
 });
 
+$("#chart").click(function(e) {
+    var status = kiwoom.getConnectState();
+    if(status == 0) {
+        kiwoom.commConnect();
+    } else if(status == 1) {
+        chart();
+    }
+});
+
 // 종목 TR 검색
 function search() {
     kiwoom.setInputValue("종목코드", $code.val());
     // rQName과 화면번호는 사용자가 지정하여 구분하는 값
     kiwoom.commRqData("주식기본정보", "opt10001", 0, "0001");
+}
+
+function chart() {
+    kiwoom.setInputValue("종목코드", $code.val());
+    kiwoom.setInputValue("기준일자", (new Date()).yyyymmdd());
+    kiwoom.setInputValue("수정주가구분 ", 0);
+    // rQName과 화면번호는 사용자가 지정하여 구분하는 값
+    kiwoom.commRqData("주식일봉차트조회요청", "opt10081", 0, "0002");
 }
 </script>
 
