--- a/index.html
+++ b/index.html
@@ -3,27 +3,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=medium-dpi">
-    <style>[ng-cloak] { display: none; }</style>
- 
-    <script>
-            Date.prototype.yyyymmdd = function()
-            {
-                var yyyy = this.getFullYear().toString();
-                var mm = (this.getMonth() + 1).toString();
-                var dd = this.getDate().toString();
-                return yyyy + (mm[1] ? mm : '0'+mm[0]) + (dd[1] ? dd : '0'+dd[0]);
-            }
-    </script>  
+     
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular-route.js"></script>
-    
 </head>
 
-<body ng-app="kiwoomApp">
-       <div id="trading-view" ng-view></div>
+<body ng-app="kiwoomApp" ng-cloak>
+       <div class="trading-view" ng-view></div>
 
    
 <script src="app/app.js"></script>
 <script src="app/controllers/tradingCtrl.js"></script>
+<script src="app/services/Kiwoom.js"></script>
 </body>
 </html>
