--- a/index.html
+++ b/index.html
@@ -20,7 +20,43 @@ Date.prototype.yyyymmdd = function()
     <button id="chart">차트 데이터 검색</button>
 </div>
 <script>
+// QWebchannel 사용 예
+new QWebChannel(qt.webChannelTransport, function(channel){
+    kiwoom = channel.objects.kiwoom;
+    kiwoom.fireEvent.connect(function(event, data){
+        console.info('< '+event+' > received from the server...');
+        console.info('Data info :');
+        console.info(JSON.parse(data));
+        //eventHandler(event, JSON.parse(data));
+    });
+});
+    
 var $code = $("#stockcode");
+
+$("#search").click(function(e) {
+    kiwoom.getConnectState(function(state){
+        if(status == 0) {
+            kiwoom.commConnect(function(){
+                kiwoom.loginEvent.connect(function(event, errCode){
+                    if (errCode == 0) console.log("로그인 성공");
+                    else console.log('로그인 실패 (errCode: '+errCode+')');
+                })
+            });
+        } else if (status ==1 ){
+            search();
+        }
+    });
+});
+
+$("#chart").click(function(e) {
+    var status = kiwoom.getConnectState();
+    if(status == 0) {
+        kiwoom.commConnect();
+    } else if(status == 1) {
+        chart();
+    }
+});
+
 document.addEventListener("eventConnect.kiwoom", function(e) {
     var errcode = e.detail;
     if(errcode == 0) {
@@ -73,23 +109,7 @@ document.addEventListener("receiveRealData.kiwoom", function(e) {
     console.log(kiwoom.commGetData(data.jongmokCode, data.realType, 10,  0, ""));
 });
 
-$("#search").click(function(e) {
-    var status = kiwoom.getConnectState();
-    if(status == 0) {
-        kiwoom.commConnect();
-    } else if(status == 1) {
-        search();
-    }
-});
 
-$("#chart").click(function(e) {
-    var status = kiwoom.getConnectState();
-    if(status == 0) {
-        kiwoom.commConnect();
-    } else if(status == 1) {
-        chart();
-    }
-});
 
 // 종목 TR 검색
 function search() {
