--- a/index.html
+++ b/index.html
@@ -20,48 +20,72 @@ Date.prototype.yyyymmdd = function()
     <button id="chart">차트 데이터 검색</button>
 </div>
 <script>
+"use strict";
 // QWebchannel 사용 예
 new QWebChannel(qt.webChannelTransport, function(channel){
-    kiwoom = channel.objects.kiwoom;
-    kiwoom.fireEvent.connect(function(event, data){
-        console.info('< '+event+' > received from the server...');
-        console.info('Data info :');
-        console.info(JSON.parse(data));
-        //eventHandler(event, JSON.parse(data));
+    var kiwoom = window.kiwoom = channel.objects.kiwoom;
+
+    // Invoke a method:
+    for(var p in kiwoom) {
+        // kw_로 시작 하는 메소드
+        if(p.startsWith("kw_")) {
+            let name = p.substring(p.indexOf("kw_") + 3);
+            let orgName = p;
+            console.info(name, orgName);
+            window.kiwoom[name]= () => {
+                console.log(name, orgName);
+                // 아규먼트를 어떻게 받을것 인가?
+                let methodArgs = Array.prototype.slice.call(arguments);
+                console.warn(methodArgs);
+                return new Promise( (resolve, reject) => {
+                    kiwoom[orgName](ret => resolve(ret));
+                });
+            };
+        }
+    }
+    // 이벤트 처리
+    kiwoom.bridge.connect(function(eventName, data){
+        var event = document.createEvent("CustomEvent");
+        event.initCustomEvent(eventName, true, true, data );
+        document.dispatchEvent(event);
     });
 });
-    
+
 var $code = $("#stockcode");
 
 $("#search").click(function(e) {
-    kiwoom.getConnectState(function(state){
-        if(status == 0) {
-            kiwoom.commConnect(function(){
-                kiwoom.loginEvent.connect(function(event, errCode){
-                    if (errCode == 0) console.log("로그인 성공");
-                    else console.log('로그인 실패 (errCode: '+errCode+')');
-                })
-            });
-        } else if (status ==1 ){
-            search();
-        }
-    });
+    // kiwoom.getConnectState(function(state){
+    //     if(status == 0) {
+    //         kiwoom.commConnect(function(){
+    //             kiwoom.loginEvent.connect(function(event, errCode){
+    //                 if (errCode == 0) console.log("로그인 성공");
+    //                 else console.log('로그인 실패 (errCode: '+errCode+')');
+    //             })
+    //         });
+    //     } else if (status ==1 ){
+    //         search();
+    //     }
+    // });
 });
 
 $("#chart").click(function(e) {
-    var status = kiwoom.getConnectState();
-    if(status == 0) {
-        kiwoom.commConnect();
-    } else if(status == 1) {
-        chart();
-    }
+    console.log("state");
+    kiwoom.getConnectState().then( status => {
+        console.log("status--->", status);
+        if(status == 0) {
+            kiwoom.commConnect();
+        } else if(status == 1) {
+            chart();
+        }
+    });
 });
 
 document.addEventListener("eventConnect.kiwoom", function(e) {
     var errcode = e.detail;
     if(errcode == 0) {
-        console.info("로그인 완료");
-        console.log(kiwoom.getLoginInfo("ACCNO").replace(/;$/,"").split(";"));
+        console.info("로그인 완료", errcode);
+        // console.log(kiwoom.getLoginInfo("ACCNO").replace(/;$/,"").split(";"));
+        kiwoom.getLoginInfo("ACCNO").then(ret => console.log(ret));
     } else {
         console.error(kiwoom.parseErrorCode(errcode));
     }
